fix certificate issues

--- a/deploy/helm/gh-webhook-monitor/templates/deployment.yaml
+++ b/deploy/helm/gh-webhook-monitor/templates/deployment.yaml
@@ -33,6 +33,7 @@ spec:
           volumeMounts:
             - mountPath: /gh/app.pem
               name: gh-app-pem
+              subPath: app.pem
           envFrom:
             - secretRef:
                 name: {{ .Values.envFromSecret }}
