--- a/deploy/helm/gh-webhook-monitor/values.yaml
+++ b/deploy/helm/gh-webhook-monitor/values.yaml
@@ -1,13 +1,8 @@
 name: gh-webhook-monitor
-image: iwilltry42/gh-webhook-monitor:20200911.0
+image: iwilltry42/gh-webhook-monitor:v0.0.1
 imagePullPolicy: IfNotPresent
 labels:
   app: gh-webhook-monitor
 pemSecret: gh-app-pem
 envFromSecret: gh-webhook-monitor
-repos:
-  - trivago/mpops-prometheus-stack
-  - trivago/mpops-secrets
-  - trivago/bm-live-c2b-training-data
-  - trivago/ad-ctr-prediction
-  - trivago/ikigai
+repos: []
