move global webhook filter

--- a/deploy/helm/gh-webhook-monitor/values.yaml
+++ b/deploy/helm/gh-webhook-monitor/values.yaml
@@ -5,5 +5,9 @@ labels:
   app: gh-webhook-monitor
 pemSecret: gh-app-pem
 envFromSecret: gh-webhook-monitor
-webhookTargetURLFilterRegexp: ""
-repos: []
+repoFilters:
+  teams: []
+  exclude: []
+  include: []
+webhookFilters:
+  targetUrlRegexp: ""
