--- a/deploy/helm/gh-webhook-monitor/values.yaml
+++ b/deploy/helm/gh-webhook-monitor/values.yaml
@@ -1,5 +1,5 @@
 name: gh-webhook-monitor
-image: iwilltry42/gh-webhook-monitor:v0.0.3
+image: iwilltry42/gh-webhook-monitor:v0.0.5
 imagePullPolicy: IfNotPresent
 labels:
   app: gh-webhook-monitor
@@ -10,4 +10,4 @@ repoFilters:
   exclude: []
   include: []
 webhookFilters:
-  targetUrlRegexp: ""
+  targetURLRegexp: ""
