--- a/deploy/helm/gh-webhook-monitor/templates/deployment.yaml
+++ b/deploy/helm/gh-webhook-monitor/templates/deployment.yaml
@@ -3,16 +3,16 @@ kind: Deployment
 metadata:
   name: "{{ .Values.name }}"
   labels:
-    {{ toYaml .Values.labels }}
+    {{- toYaml .Values.labels | nindent 4 }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      {{ toYaml .Values.labels }}
+      {{- toYaml .Values.labels | nindent 6 }}
   template:
     metadata:
       labels:
-        {{ toYaml .Values.labels }}
+        {{- toYaml .Values.labels | nindent 8 }}
     spec:
       containers:
         - name: "{{ .Values.name }}"
