--- a/deploy/helm/gh-webhook-monitor/values.yaml
+++ b/deploy/helm/gh-webhook-monitor/values.yaml
@@ -1,5 +1,5 @@
 name: gh-webhook-monitor
-image: iwilltry42/gh-webhook-monitor:v0.0.6
+image: iwilltry42/gh-webhook-monitor:v0.1.0
 imagePullPolicy: IfNotPresent
 labels:
   app: gh-webhook-monitor
@@ -12,3 +12,4 @@ repoFilters:
 webhookFilters:
   targetURLRegexp: ""
 extraEnv: {}
+alertLabels: {}
