fix PrometheusRule formatting

--- a/deploy/helm/gh-webhook-monitor/templates/prometheusrule.yaml
+++ b/deploy/helm/gh-webhook-monitor/templates/prometheusrule.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: {{ .Release.Namespace }}
 spec:
   groups:
-    - name: gh-webhooks
+    - name: GitHubWebhooks
       rules:
         - alert: Non2XXStatusCode
           expr: gh_webhook_last_status_code_group{code_group!~"2xx|unused", status="active"} > 1
@@ -16,5 +16,7 @@ spec:
             {{- toYaml .Values.alertLabels | nindent 12 }}
           {{- end }}
           annotations:
-            summary: "Last seen status code for active/used webhook {{ $labels.webhook }} was non-2xx!"
-            description: "A non-2xx ({{ $labels.code_group }}) status code was returned for a webhook in repo {{ $labels.repository }}"
+            summary: |-
+              '{{`Last seen status code for active/used webhook {{ $labels.webhook }} was non-2xx!`}}'
+            description: |-
+              '{{`A non-2xx ({{ $labels.code_group }}) status code was returned for a webhook in repo {{ $labels.repository }}`}}'
